<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_category_app">

        <ListPreference
            android:key="app_theme"
            android:summary="@string/settings_app_theme_summary"
            android:title="@string/settings_app_theme_title"
            android:entries="@array/settings_theme_entries"
            android:entryValues="@array/settings_theme_values"
            android:defaultValue="0"/>

        <CheckBoxPreference
            android:key="app_notification"
            android:summary="@string/settings_app_notification_summary"
            android:title="@string/settings_app_notification_title"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_list">

        <ListPreference
            android:key="list_order"
            android:summary="@string/settings_list_order_summary"
            android:title="@string/settings_list_order_title"
            android:entries="@array/settings_list_order_entries"
            android:entryValues="@array/settings_list_order_values"
            android:defaultValue="1"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_about">

        <Preference
            android:key="about_app"
            android:persistent="false"
            android:summary="@string/settings_about_app_summary"
            android:title="@string/settings_about_app_title"/>

        <Preference
            android:key="about_skyost"
            android:persistent="false"
            android:summary="@string/settings_about_skyost_summary"
            android:title="@string/settings_about_skyost_title"/>

        <Preference
            android:key="about_github"
            android:persistent="false"
            android:summary="@string/settings_about_github_summary"
            android:title="@string/settings_about_github_title"/>

    </PreferenceCategory>

</PreferenceScreen>