<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.LessonActivity">

    <item
        android:id="@+id/menu_main_add"
        android:icon="@drawable/main_menu_add"
        android:orderInCategory="100"
        android:title="@string/main_menu_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_main_delete"
        android:icon="@drawable/menu_main_delete"
        android:orderInCategory="200"
        android:title="@string/menu_main_delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_main_settings"
        android:icon="@drawable/menu_main_settings"
        android:orderInCategory="300"
        android:title="@string/menu_main_settings"
        app:showAsAction="ifRoom"/>

</menu>